--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,16 @@
 {% extends "base.html" %}
 
 {% block page_content %}
-<div class="container">
-    <div class="page-header">
-        <h1>Hello, World!</h1>
-    </div>
+<div class="page-header">
+    <h1>Hello, {% if name %}{{ name }}{% else %}World{% endif %}!</h1>
+    {% if not known %}
+    <p>Nice to meet you!</p>
+    {% else %}
+    <p>Good to see you again</p>
+    {% endif %}
+</div>
+<div>
+{{ wtf.quick_form(form) }}
 </div>
 {% endblock %}
 
