--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,6 +25,13 @@
             <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
             </ul>
+            <ul class="nav navbar-nav navbar-right">
+                {% if current_user.is_authenticated() %}
+                <li><a href="{{ url_for('auth.logout') }}">Sign Out</a></li>
+                {% else %}
+                <li><a href="{{ url_for('auth.login') }}">Sign In</a></li>
+                {% endif %}
+            </ul>
         </div>
     </div>
 </div>
@@ -41,14 +48,5 @@
 
     {% block page_content %}{% endblock %}
 </div>
-
-{% block footer %}
-<div class="container">
-    <div class="well" "well-sm">
-        {% block page_footer %}{% endblock %}
-    </div>
-</div>
-{% endblock %}
-
 
 {% endblock %}
