--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,19 +2,6 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Hello, {% if name %}{{ name }}{% else %}World{% endif %}!</h1>
-    {% if not known %}
-    <p>Nice to meet you!</p>
-    {% else %}
-    <p>Good to see you again</p>
-    {% endif %}
+    <h1>Hello, {% if current_user.is_authenticated() %}{{ current_user.username }}{% else %}stranger{% endif %}!</h1>
 </div>
-<div>
-{{ wtf.quick_form(form) }}
-</div>
-{% endblock %}
-
-{% block page_footer %}
-<p>The local date and time is {{ moment(current_time).format('LLL') }}</p>
-<p>That was {{ moment(current_time).fromNow(refresh=True) }}</p>
 {% endblock %}
