--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -3,7 +3,21 @@
 {% block page_content %}
 <div class="container">
     <div class="page-header">
-        <h1>Hello, {{name}}!</h1>
+        <h1>{{ user.username }}</h1>
+        {% if user.location %}
+        <p>
+            From <a href="http://maps.google.com/?q={{ user.location }}"> {{ user.location }} </a>.
+        </p>
+        {% endif %}
+        {% if user.about_me %}
+        <p>
+            {{ user.about_me }}
+        </p>
+        {% endif %}
+        <p>
+            Member since {{ moment(user.member_since).format('L') }}.
+            Last seen {{ moment(user.last_seen).fromNow() }}.
+        </p>
     </div>
 </div>
 {% endblock %}
